--- a/opmaak.css
+++ b/opmaak.css
@@ -1,6 +1,8 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+    border: 1px solid red;
 }
 
 body{
@@ -11,4 +13,40 @@ body{
 .wrapper{
     width: 80%;
     margin: auto;
+}
+
+/* navbar */
+.navigatiebalk{
+    background-color: #00468E;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+nav{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+nav a{
+    color: white;
+    text-decoration: none;
+}
+
+nav ul{
+    list-style-type: none;
+    display: flex;
+    gap: 2em;
+    justify-content: end;
+}
+
+#offerte{
+    /* margin-top: 5em; */
+    text-align: right;
 }
